--- a/scenes/sceneE.yaml
+++ b/scenes/sceneE.yaml
@@ -1,25 +1,26 @@
 #version 1.0
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
--010
+channels:
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
+- 010
