--- a/scenes/sceneD.yaml
+++ b/scenes/sceneD.yaml
@@ -1,25 +1,26 @@
 #version 1.0
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
--255
--000
+channels:
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
+- 255
+- 000
