--- a/scenes/sceneC.yaml
+++ b/scenes/sceneC.yaml
@@ -1,25 +1,26 @@
 #version 1.0
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
--122
+channels:
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
+- 122
