--- a/scenes/sceneB.yaml
+++ b/scenes/sceneB.yaml
@@ -1,25 +1,26 @@
 #version 1.0
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
--000
+channels:
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
+- 000
