--- a/scenes/sceneA.yaml
+++ b/scenes/sceneA.yaml
@@ -1,25 +1,26 @@
 #version 1.0
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
--255
+channels:
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
+- 255
